##Text encoding: utf-8

2009-10-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/chaintool.cc: always set the bond angle in the
	active document.

2009-10-12  Jean Bréfort  <jean.brefort@normalesup.org>

	* libs/gcp/mechanism-arrow.cc: add links to source and target.
	* libs/gcp/mechanism-arrow.h: ditto.
	* libs/gcu/chemistry.h: fixed typo in documentation.
	* libs/gcu/object.cc: add Object::Link() and make links really work.
	* libs/gcu/object.h: ditto.
	* libs/gcu/xml-utils.cc: add gcu::WriteFloat and move all functions to
	gcu namespace.
	* libs/gcu/xml-utils.h: ditto.

2009-10-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-arrow.cc: implement partially AddItem().
	* libs/gcp/mechanism-arrow.h: some more members.
	* plugins/paint/arrows/curvedarrowtool.cc: fixed second control point.

2009-10-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: fixed three typos. [#27619]

2009-10-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/bezier-arrow.cc: take control points in bounds when visible.
	* libs/gcp/Makefile.am: add some classes to support mechanism curved arrows.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/mechanism-arrow.cc: ditto.
	* libs/gcp/mechanism-arrow.h: ditto.
	* libs/gcp/mechanism-step.cc: ditto.
	* libs/gcp/mechanism-step.h: ditto.
	* libs/gcp/reaction-step.cc: ditto.
	* libs/gcp/reaction-step.h: ditto.
	* mozilla-plugin/chem-viewer.cc: removed extra spaces.
	* mozilla-plugin/moz-plugin.c (ChemNew): remove apparently obsolete code.
	* plugins/paint/arrows/curvedarrowtool.cc: show a curved arrow when clicked
	on a bond.
	* plugins/paint/arrows/curvedarrowtool.h: ditto.

2009-09-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed a couple of crashers.

2009-09-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: load settings before plugins.
	* plugins/paint/bonds/Makefile.am: add a new pixmap.